fix product-select width
Squashed commit of the following:

commit cb75b2d5c8cdb044e3ff31461e3a471e2e5ab854
Author: Slava Leleka <v.leleka@adguard.com>
Date:   Mon Apr 24 19:40:26 2023 +0300

    fix product-select width

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -302,6 +302,7 @@ footer > .mission {
 .product-select {
   border: none;
   font-size: 1.2vw;
+  min-width: 15.5vw;
   color: #4a4a4a;
   background: #fff url(../img/arrow-down.png) right center no-repeat;
   background-size: 24px;
